--- a/about.html
+++ b/about.html
@@ -97,6 +97,9 @@
             }
 
             .about-card {
+                text-align: center;
+                width: 400px;
+                padding: 50px;
                 transition: transform 0.3s, box-shadow 0.3s;
             }
 
@@ -107,6 +110,11 @@
 
             .about-card h2 {
                 margin-bottom: 9px;
+            }
+
+            .about-card-container{
+                margin: 100px;
+                gap: 50px;
             }
         </style>
     </body>
